--- a/main/docker-compose.yml
+++ b/main/docker-compose.yml
@@ -16,6 +16,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    restart: always
     command: 'python consumer.py'
     depends_on:
       - db
