--- a/main/docker-compose.yml
+++ b/main/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    command: 'python main.py'
+    command: 'python main_app.py'
     ports:
       - 8001:5000
     volumes:
